; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/lpr/common_source/extr_ctlinfo.c_ctl_rmjob.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/lpr/common_source/extr_ctlinfo.c_ctl_rmjob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cjobinfo = type { i32 }

@CTI_LINEMAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"ctl_renametf error cti_readcf(%s)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ctl_rmjob(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.cjobinfo*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %11 = load i32, i32* @CTI_LINEMAX, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %8, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %9, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = call %struct.cjobinfo* @ctl_readcf(i8* %15, i8* %16)
  store %struct.cjobinfo* %17, %struct.cjobinfo** %6, align 8
  %18 = load %struct.cjobinfo*, %struct.cjobinfo** %6, align 8
  %19 = icmp eq %struct.cjobinfo* %18, null
  br i1 %19, label %20, label %25

20:                                               ; preds = %2
  %21 = trunc i64 %12 to i32
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @snprintf(i8* %14, i32 %21, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i8* %22)
  %24 = call i8* @strdup(i8* %14)
  store i8* %24, i8** %3, align 8
  store i32 1, i32* %10, align 4
  br label %47

25:                                               ; preds = %2
  %26 = load %struct.cjobinfo*, %struct.cjobinfo** %6, align 8
  %27 = call i32 @ctl_rewindcf(%struct.cjobinfo* %26)
  %28 = load %struct.cjobinfo*, %struct.cjobinfo** %6, align 8
  %29 = call i8* @ctl_getline(%struct.cjobinfo* %28)
  store i8* %29, i8** %7, align 8
  br label %30

30:                                               ; preds = %41, %25
  %31 = load i8*, i8** %7, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %33, label %44

33:                                               ; preds = %30
  %34 = load i8*, i8** %7, align 8
  %35 = getelementptr inbounds i8, i8* %34, i64 0
  %36 = load i8, i8* %35, align 1
  %37 = sext i8 %36 to i32
  switch i32 %37, label %40 [
    i32 83, label %38
    i32 85, label %39
  ]

38:                                               ; preds = %33
  br label %41

39:                                               ; preds = %33
  br label %41

40:                                               ; preds = %33
  br label %41

41:                                               ; preds = %40, %39, %38
  %42 = load %struct.cjobinfo*, %struct.cjobinfo** %6, align 8
  %43 = call i8* @ctl_getline(%struct.cjobinfo* %42)
  store i8* %43, i8** %7, align 8
  br label %30

44:                                               ; preds = %30
  %45 = load %struct.cjobinfo*, %struct.cjobinfo** %6, align 8
  %46 = call i32 @ctl_freeinf(%struct.cjobinfo* %45)
  store %struct.cjobinfo* null, %struct.cjobinfo** %6, align 8
  store i8* null, i8** %3, align 8
  store i32 1, i32* %10, align 4
  br label %47

47:                                               ; preds = %44, %20
  %48 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %48)
  %49 = load i8*, i8** %3, align 8
  ret i8* %49
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local %struct.cjobinfo* @ctl_readcf(i8*, i8*) #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #2

declare dso_local i8* @strdup(i8*) #2

declare dso_local i32 @ctl_rewindcf(%struct.cjobinfo*) #2

declare dso_local i8* @ctl_getline(%struct.cjobinfo*) #2

declare dso_local i32 @ctl_freeinf(%struct.cjobinfo*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
